# libschannel

./: .gitignore  configure.ac
src/: Makefile.am  schannel.c
src/realm/: makefile  realm.h  realm.x  realm_clnt.c  realm_svc.c  realm_xdr.c
src/schannel/: schannel.h
tools/: Makefile.am  nc.c
